# Scholarship_chatBot

./: README.md
NoRAG/: pyproject.toml
RAG/src/: PDFmodel.py  controller.py  view.py
VanilaRAG/: pyproject.toml
VanilaRAG/VanilaRAG/: PDFmodel.py  controller.py  server.py  vanilarag.py  view.py
qa-bot/qa_bot/: main.py
ragbot/: pyproject.toml
