[tool.poetry]
name = "qa-bot"
version = "0.1.0"
description = ""
authors = ["HwangRock <157935545+HwangRock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
gradio = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
