[tool.poetry]
name = "ragbot"
version = "0.1.0"
description = ""
authors = ["HwangRock <157935545+HwangRock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
python-dotenv = "1.0.1"
langchain = "0.3.3"
langchain-openai = "0.2.2"
langchain-community = "0.3.1"
pypdf = "5.0.1"
chromadb = "0.5.13"
gradio = "5.0.2"
gradio-pdf = "0.0.16"
langchain-text-splitters = "0.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
